--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -63,5 +63,6 @@
     </div>
 
     <script type="module" src="renderer.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   </body>
 </html>
