--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -41,7 +41,17 @@
 
       <div id="chat-input-container">
         <input type="text" id="chat-input" placeholder="Type your message..." />
-        <button id="send-btn">Send</button>
+        <button id="send-btn">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z" />
+          </svg>
+        </button>
       </div>
     </div>
 
