--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -13,35 +13,13 @@
   </head>
   <body>
     <div id="chat-container">
-      <header>
-        <div id="model-dropdown" class="dropdown">
-          <button id="model-display-btn" class="dropdown-toggle">
-            <span id="selected-model">Loading...</span> ▼
-          </button>
-          <ul id="model-options" class="dropdown-menu hidden"></ul>
-        </div>
-        <div id="header-right">
-          <button id="settings-btn" title="Settings">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="20"
-              height="20"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M19.14 12.936a7.962 7.962 0 0 0 0-1.872l2.037-1.58a.5.5 0 0 0 .121-.638l-1.928-3.34a.5.5 0 0 0-.607-.21l-2.397.96a7.978 7.978 0 0 0-1.623-.94l-.36-2.53a.5.5 0 0 0-.493-.427h-3.856a.5.5 0 0 0-.493.427l-.36 2.53a7.978 7.978 0 0 0-1.623.94l-2.397-.96a.5.5 0 0 0-.607.21L2.702 8.846a.5.5 0 0 0 .121.638l2.037 1.58a7.962 7.962 0 0 0 0 1.872l-2.037 1.58a.5.5 0 0 0-.121.638l1.928 3.34a.5.5 0 0 0 .607.21l2.397-.96a7.978 7.978 0 0 0 1.623.94l.36 2.53a.5.5 0 0 0 .493.427h3.856a.5.5 0 0 0 .493-.427l.36-2.53a7.978 7.978 0 0 0 1.623-.94l2.397.96a.5.5 0 0 0 .607-.21l1.928-3.34a.5.5 0 0 0-.121-.638l-2.037-1.58zM12 15.5a3.5 3.5 0 1 1 0-7 3.5 3.5 0 0 1 0 7z"
-              />
-            </svg>
-          </button>
-        </div>
-      </header>
-
+      <!-- Chat messages -->
       <div id="chat-log"></div>
 
+      <!-- Chat input bar -->
       <div id="chat-input-container">
         <input type="text" id="chat-input" placeholder="Type your message..." />
-        <button id="send-btn">
+        <button id="send-btn" title="Send">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
@@ -53,10 +31,54 @@
           </svg>
         </button>
       </div>
+
+      <!-- Bottom control bar -->
+      <div id="bottom-bar">
+        <div id="model-dropdown" class="dropdown">
+          <button id="model-display-btn" class="dropdown-toggle">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-tencent-qq"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M6.048 3.323c.022.277-.13.523-.338.55-.21.026-.397-.176-.419-.453s.13-.523.338-.55c.21-.026.397.176.42.453Zm2.265-.24c-.603-.146-.894.256-.936.333-.027.048-.008.117.037.15.045.035.092.025.119-.003.361-.39.751-.172.829-.129l.011.007c.053.024.147.028.193-.098.023-.063.017-.11-.006-.142-.016-.023-.089-.08-.247-.118"
+              />
+              <path
+                d="M11.727 6.719c0-.022.01-.375.01-.557 0-3.07-1.45-6.156-5.015-6.156S1.708 3.092 1.708 6.162c0 .182.01.535.01.557l-.72 1.795a26 26 0 0 0-.534 1.508c-.68 2.187-.46 3.093-.292 3.113.36.044 1.401-1.647 1.401-1.647 0 .979.504 2.256 1.594 3.179-.408.126-.907.319-1.228.556-.29.213-.253.43-.201.518.228.386 3.92.246 4.985.126 1.065.12 4.756.26 4.984-.126.052-.088.088-.305-.2-.518-.322-.237-.822-.43-1.23-.557 1.09-.922 1.594-2.2 1.594-3.178 0 0 1.041 1.69 1.401 1.647.168-.02.388-.926-.292-3.113a26 26 0 0 0-.534-1.508l-.72-1.795ZM9.773 5.53a.1.1 0 0 1-.009.096c-.109.159-1.554.943-3.033.943h-.017c-1.48 0-2.925-.784-3.034-.943a.1.1 0 0 1-.018-.055q0-.022.01-.04c.13-.287 1.43-.606 3.042-.606h.017c1.611 0 2.912.319 3.042.605m-4.32-.989c-.483.022-.896-.529-.922-1.229s.344-1.286.828-1.308c.483-.022.896.529.922 1.23.027.7-.344 1.286-.827 1.307Zm2.538 0c-.484-.022-.854-.607-.828-1.308.027-.7.44-1.25.923-1.23.483.023.853.608.827 1.309-.026.7-.439 1.251-.922 1.23ZM2.928 8.99q.32.063.639.117v2.336s1.104.222 2.21.068V9.363q.49.027.937.023h.017c1.117.013 2.474-.136 3.786-.396.097.622.151 1.386.097 2.284-.146 2.45-1.6 3.99-3.846 4.012h-.091c-2.245-.023-3.7-1.562-3.846-4.011-.054-.9 0-1.663.097-2.285"
+              />
+            </svg>
+            <span id="selected-model">Loading...</span> ▼
+          </button>
+          <!-- <ul id="model-options" class="dropdown-menu hidden"></ul> -->
+          <ul id="model-options" class="dropdown-menu"></ul>
+        </div>
+
+        <button id="settings-btn" title="Settings">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="18"
+            height="18"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M19.14 12.936a7.962 7.962 0 0 0 0-1.872l2.037-1.58a.5.5 0 0 0 .121-.638l-1.928-3.34a.5.5 0 0 0-.607-.21l-2.397.96a7.978 7.978 0 0 0-1.623-.94l-.36-2.53a.5.5 0 0 0-.493-.427h-3.856a.5.5 0 0 0-.493.427l-.36 2.53a7.978 7.978 0 0 0-1.623.94l-2.397-.96a.5.5 0 0 0-.607.21L2.702 8.846a.5.5 0 0 0 .121.638l2.037 1.58a7.962 7.962 0 0 0 0 1.872l-2.037 1.58a.5.5 0 0 0-.121.638l1.928 3.34a.5.5 0 0 0 .607.21l2.397-.96a7.978 7.978 0 0 0 1.623.94l.36 2.53a.5.5 0 0 0 .493.427h3.856a.5.5 0 0 0 .493-.427l.36-2.53a7.978 7.978 0 0 0 1.623-.94l2.397.96a.5.5 0 0 0 .607-.21l1.928-3.34a.5.5 0 0 0-.121-.638l-2.037-1.58zM12 15.5a3.5 3.5 0 1 1 0-7 3.5 3.5 0 0 1 0 7z"
+            />
+          </svg>
+          Settings
+        </button>
+      </div>
     </div>
 
+    <!-- Settings Panel -->
     <div id="settings-panel" class="hidden">
-      <h2>⚙️ Settings</h2>
+      <h2>
+        <i class="bi bi-gear"></i>
+      </h2>
       <div class="setting">
         <label for="dark-mode-toggle">Dark Mode:</label>
         <input type="checkbox" id="dark-mode-toggle" />
@@ -72,7 +94,9 @@
       <button id="save-btn">Save</button>
     </div>
 
+    <!-- Scripts -->
     <script type="module" src="renderer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
